fix: update script source path to absolute URL

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </calcite-dialog>
   </calcite-shell>
   <calcite-loader label="loading" text="Loading..."></calcite-loader>
-  <script type="module" src="./src/main.js"></script>
+  <script type="module" src="/src/main.js"></script>
   
   <div id="line-hover-popup"></div>
 
